Mobile Off-Screen Elements Fix?

--- a/styles.css
+++ b/styles.css
@@ -113,6 +113,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
     background-image: linear-gradient(45deg, hsl(235, 23%, 32%), #00e0a8);
     width: 100%;
     padding: 20px;
@@ -140,11 +141,11 @@ a {
 }
 
 .about_section img {
-    width: 30vw;
-    max-width: 400px;
-    max-height: 400px;
+    width: 100%;
+    max-width: 250px;
+    max-height: 250px;
     border-radius: 50%;
-    border: 5px solid hsl(231, 23%, 12%);
+    border: 3px solid hsl(231, 23%, 12%);
 }
 
 /* PROJECTS SECTION ---------------------------------*/
@@ -281,7 +282,7 @@ a {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
-    padding: 10px 20px;
+    padding: 10px 5%;
 }
 
 .contact_div_1 {
@@ -341,7 +342,7 @@ a {
         font-size: 1.2rem;
     }
     .about_section img {
-        width: 50vw;
+        width: 100%;
         max-width: 250px;
         max-height: 250px;
         border: 3px solid hsl(231, 23%, 12%);
